updated for unit tests